--- a/pinch/templates/validate.html
+++ b/pinch/templates/validate.html
@@ -8,16 +8,17 @@
         <div class="col-md-8">
 
           <h1>{% block page_title %}Validate{% endblock page_title %} <span>5-15 Minutes</span></h1>
-          <form role="form venn">
+          <form role="form venn" method="post">
+            {% csrf_token %}
             <div class="row">
               <div class="form-group col-md-4">
-                <input type="text" class="form-control" id="offering" placeholder="Offering">
+                <input type="text" class="form-control" name="offering" id="offering" placeholder="Offering">
               </div>
               <div class="form-group col-md-4">
-                <input type="text" class="form-control" id="valueProp" placeholder="Value proposition">
+                <input type="text" class="form-control" name="valueProp" id="valueProp" placeholder="Value proposition">
               </div>
               <div class="form-group col-md-4">
-                <input type="text" class="form-control" id="customer" placeholder="Customer">
+                <input type="text" class="form-control" name="customer" id="customer" placeholder="Customer">
               </div>
             </div>
             <button type="submit" class="btn btn-default">Next</button>
